--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 계산신경과학연구실
-short_labname: ChungLab
-email: physi5logy@gmail.com
+title: 경기대 문헌정보학과 지능형컨텐츠연구실
+short_labname: ICL
+email: ahj0128@kyonggi.ac.kr
 logo: logo.png
 description: > # 다음 줄에 연구실 소개 입력
-  ChungLab of Computational Neuroscience, Seoul National University; 서울대학교 치과대학 정지훈 교수 감각신경 연구실; Gehoon Chung;
+  Kyonggi University; 경기대 문헌정보학과 연구실; Hyojun An;
 baseurl: "" # the subpath of your site, e.g. /blog
 github_username:  ChungLab
 google-site-verification:
