--- a/_data/notice.yml
+++ b/_data/notice.yml
@@ -1,5 +1,5 @@
 - title: 홈페이지 오픈!!
-  notice: 공지사항은 _data 폴더 안에 notice.yml 파일에 작성하세요.
+  notice: 경기대학교 문헌정보학과 지능형 컨텐츠 연구실입니다!
   status: open
 
 - title: 두번째 공지
