--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: 경기대 문헌정보학과 지능형컨텐츠연구실
 short_labname: ICL
 email: ahj0128@kyonggi.ac.kr
-logo: logo.png
+logo: ""
 description: > # 다음 줄에 연구실 소개 입력
   Kyonggi University; 경기대 문헌정보학과 연구실; Hyojun An;
 baseurl: "" # the subpath of your site, e.g. /blog
