--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: 경기대 문헌정보학과 지능형컨텐츠연구실
-short_labname: ICL
+short_labname: Intelligent Contents Laboratory
 email: ahj0128@kyonggi.ac.kr
 logo: ""
 description: > # 다음 줄에 연구실 소개 입력
